<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Kotlin-CRUD-Online</string>
    <string name="welcome">Welcome to WTF Forum App</string>
    <string name="singin">Sign in</string>
    <string name="singup">Sign up</string>
    <string name="email">Email Address</string>
    <string name="un">Username</string>
    <string name="pass">Password</string>
    <string name="donthaveaccount">Already have account ? Sign in</string>
    <string name="haveaccount" tools:ignore="StringEscaping">Dont have account ? Sign up</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="profile">Profile</string>
</resources>
