<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="kotlin_crud_online.models.SignupActivity"
        android:background="@color/twitterBlue">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView android:layout_width="100dp" android:layout_height="100dp"
    android:src="@drawable/signup"
               android:id="@+id/img_Signup"
               android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:text="@string/singup"
    android:layout_below="@+id/img_Signup"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="30dp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:textSize="30sp"
    android:id="@+id/txt_Signup"/>

    <EditText android:layout_width="250dp" android:layout_height="wrap_content"
    android:layout_below="@+id/txt_Signup"
    android:id="@+id/et_Email"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:hint="@string/email"
    android:textAlignment="center"
    android:textColor="@color/white"
    android:inputType="textEmailAddress"/>

    <EditText android:layout_width="250dp" android:layout_height="wrap_content"
              android:layout_below="@+id/et_Email"
              android:id="@+id/et_Username"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="20dp"
              android:hint="@string/un"
              android:textAlignment="center"
              android:textColor="@color/white"
    android:inputType="text"/>

    <EditText android:layout_width="250dp" android:layout_height="wrap_content"
              android:layout_below="@+id/et_Username"
              android:id="@+id/et_Password"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="20dp"
              android:hint="@string/pass"
              android:textAlignment="center"
              android:textColor="@color/white"
    android:inputType="textPassword"/>


    <Button android:layout_width="200dp" android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:layout_below="@id/et_Password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:text="@string/singup"
            android:textColor="@color/twitterBlue"
            android:textStyle="bold"
            android:id="@+id/btn_Signup"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_below="@id/btn_Signup"
        android:id="@+id/btn_Signin"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/donthaveaccount"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    </RelativeLayout>
</ScrollView>
