<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context="kotlin_crud_online.models.MainActivity">

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/welcome"
              android:id="@+id/txt_Welcome"
              android:layout_marginTop="70dp"
    android:layout_centerHorizontal="true"
    android:textColor="@color/white"
    android:textStyle="bold"
    android:textSize="20sp"/>

    <ImageView android:layout_width="200dp" android:layout_height="200dp"
               android:src="@drawable/welcome"
               android:id="@+id/img_Welcome"
               android:layout_centerHorizontal="true"
               android:layout_marginTop="11dp"
               android:layout_below="@+id/txt_Welcome"/>

    <Button android:layout_width="200dp" android:layout_height="wrap_content"
    android:background="@drawable/roundbutton"
    android:layout_below="@id/img_Welcome"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="45dp"
    android:text="@string/singup"
    android:textColor="@color/colorPrimary"
    android:textStyle="bold"
    android:id="@+id/btn_Signup"/>

    <Button android:layout_width="200dp" android:layout_height="wrap_content"
            android:background="@drawable/roundbutton"
            android:layout_below="@id/btn_Signup"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/singin"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:id="@+id/btn_Signin"/>



</RelativeLayout>