<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlueJeansDark"
        tools:context="kotlin_crud_online.models.SigninActivity">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">

        <ImageView android:layout_width="100dp" android:layout_height="100dp"
                   android:src="@drawable/signin"
                   android:id="@+id/img_Signin"
                   android:layout_marginTop="50dp"
                   android:layout_centerHorizontal="true"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/singin"
                  android:layout_below="@+id/img_Signin"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="30dp"
                  android:textStyle="bold"
                  android:textColor="@color/white"
                  android:textSize="30sp"
                  android:id="@+id/txt_Signin"/>

        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
                  android:layout_below="@+id/txt_Signin"
                  android:id="@+id/et_Username"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="20dp"
                  android:hint="@string/un"
                  android:textAlignment="center"
                  android:textColor="@color/white"
                  android:inputType="text"/>

        <EditText android:layout_width="250dp" android:layout_height="wrap_content"
                  android:layout_below="@+id/et_Username"
                  android:id="@+id/et_Password"
                  android:layout_centerHorizontal="true"
                  android:layout_marginTop="20dp"
                  android:hint="@string/pass"
                  android:textAlignment="center"
                  android:textColor="@color/white"
                  android:inputType="textPassword"/>


        <Button android:layout_width="200dp" android:layout_height="wrap_content"
                android:background="@drawable/roundbutton"
                android:layout_below="@id/et_Password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:text="@string/singin"
                android:textColor="@color/colorBlueJeansDark"
                android:textStyle="bold"
                android:id="@+id/btn_Signin"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_below="@id/btn_Signin"
                  android:id="@+id/btn_Signup"
                  android:layout_marginTop="20dp"
                  android:layout_centerHorizontal="true"
                  android:text="@string/haveaccount"
                  android:textColor="@color/white"
                  android:textStyle="bold"/>

    </RelativeLayout>

</ScrollView>
